<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.7</version>
        <relativePath/>
    </parent>

    <groupId>com.ksyun.agent</groupId>
    <artifactId>agent-platform</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>agent-platform</name>
    <description>Generic Agent Framework based on Spring AI + LangGraph4j</description>

    <modules>
        <module>agent-core</module>
        <module>agent-runtime</module>
        <module>agent-application</module>
        <module>agent-infrastructure</module>
        <module>agent-api</module>
        <module>agent-bootstrap</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <json-schema-validator.version>1.5.4</json-schema-validator.version>
        <jackson-bom.version>2.18.2</jackson-bom.version>
        <spring-ai.version>1.1.8</spring-ai.version>
        <langgraph4j.version>1.8.20</langgraph4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring AI BOM -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Internal modules -->
            <dependency>
                <groupId>com.ksyun.agent</groupId>
                <artifactId>agent-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ksyun.agent</groupId>
                <artifactId>agent-runtime</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ksyun.agent</groupId>
                <artifactId>agent-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ksyun.agent</groupId>
                <artifactId>agent-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ksyun.agent</groupId>
                <artifactId>agent-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- JSON Schema Validator -->
            <dependency>
                <groupId>com.networknt</groupId>
                <artifactId>json-schema-validator</artifactId>
                <version>${json-schema-validator.version}</version>
            </dependency>
            <!-- Jackson (used by agent-runtime for JSON Schema validation) -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson-bom.version}</version>
            </dependency>
            <!-- LangGraph4j -->
            <dependency>
                <groupId>org.bsc.langgraph4j</groupId>
                <artifactId>langgraph4j-core</artifactId>
                <version>${langgraph4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${maven.compiler.release}</release>
                    <encoding>UTF-8</encoding>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
